--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   go_router: ^14.0.2
   dartz: ^0.10.1
   flutter_screenutil: ^5.9.0
+  flutter_local_notifications: ^17.1.2
+  flutter_html: ^3.0.0-beta.2
 
 
 dev_dependencies:
