--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_html: ^3.0.0-beta.2
   firebase_core: ^3.1.0
   firebase_messaging: ^15.0.1
+  workmanager: ^0.5.2
 
 dev_dependencies:
   flutter_test:
