--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_core: ^3.1.0
   firebase_messaging: ^15.0.1
   workmanager: ^0.5.2
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
