--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,10 +46,28 @@ dependencies:
   firebase_messaging: ^15.0.1
   workmanager: ^0.5.2
   url_launcher: ^6.3.0
+  flutter_native_splash: ^2.4.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_native_splash:
+    android: true
+    ios: true
+    web: false
+    color: "#42a5f5"
+    image: assets/images/splash_screen.jpg
+    android_gravity: fill
+    ios_content_mode: scaleAspectFill
+    fullscreen: true
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/icon_app.jpg"
+  min_sdk_android: 21
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
