--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   url_launcher: ^6.3.0
   flutter_native_splash: ^2.4.0
   flutter_launcher_icons: ^0.13.1
+  flutter_image_slideshow: ^0.1.6
 
 flutter_native_splash:
     android: true
