--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_image_slideshow: ^0.1.6
   flutter_native_splash: ^2.4.0
   share_plus: ^9.0.0
+  google_mobile_ads: ^5.1.0
 #
 flutter_native_splash:
     android: true
