--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   flutter_native_splash: ^2.4.0
   share_plus: ^9.0.0
   google_mobile_ads: ^5.1.0
+  cached_network_image: ^3.3.1
+  connectivity_plus: ^6.0.3
 #
 flutter_native_splash:
     android: true
