--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   google_mobile_ads: ^5.1.0
   cached_network_image: ^3.3.1
   connectivity_plus: ^6.0.3
+  rename: ^3.0.2
 #
 flutter_native_splash:
     android: true
