--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
 
     <application
-        android:label="alafdal_app"
+        android:label="AlafdalNews"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
 
