--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   google_mobile_ads: ^5.1.0
   cached_network_image: ^3.3.1
   connectivity_plus: ^6.0.3
+  firebase_core: ^3.4.0
+  firebase_messaging: ^15.1.0
 #
 flutter_native_splash:
     android: true
