--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   connectivity_plus: ^6.0.3
   firebase_core: ^3.4.0
   firebase_messaging: ^15.1.0
+  rename: ^3.0.2
 #
 flutter_native_splash:
     android: true
