--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,12 +46,13 @@ dependencies:
   flutter_image_slideshow: ^0.1.6
   flutter_native_splash: ^2.4.0
   share_plus: ^9.0.0
-  google_mobile_ads: ^5.1.0
   cached_network_image: ^3.3.1
   connectivity_plus: ^6.0.3
   firebase_core: ^3.4.0
   firebase_messaging: ^15.1.0
   rename: ^3.0.2
+  google_mobile_ads: ^5.2.0
+  uni_links: ^0.5.1
 #
 flutter_native_splash:
     android: true
